# Genesis3D

./: CMakeLists.txt  Genesis3D.sln  README.md
doc/: 3DSMaxGuide.htm  Drivers.htm  (+16 more)
source/Genesis/: CAMERA.H  CMakeLists.txt  CSNetMgr.cpp  CSNetMgr.h  Camera.cpp  GENESIS.H  GENESIS.old  Ge.cpp  Genesis.dsp  GenesisDLL.vcxproj  GenesisDLL.vcxproj.filters  Netplay.cpp  Netplay.h  PTRTYPES.H  SOUND.H  SOUND3D.H  Sound.cpp  Sound3d.cpp  Tclip.cpp  cpp.hint  getypes.h  list.cpp  list.h  tclip.h  timer.cpp  timer.h  tsc.cpp  tsc.h
source/Genesis/Actor/: QKFrame.cpp  QKFrame.h  XFArray.cpp  actor.cpp  actor.h  body._h  body.cpp  body.h  bodyinst.cpp  bodyinst.h  motion.cpp  motion.h  path.cpp  path.h  pose.cpp  pose.h  puppet.cpp  puppet.h  strblock.cpp  strblock.h  tkarray.cpp  tkarray.h  tkevents.cpp  tkevents.h  vkframe.cpp  vkframe.h  xfarray.h
source/Genesis/Bitmap/: bitmap._h  bitmap.cpp  bitmap.h  bitmap_blitdata.cpp  bitmap_gamma.cpp  pixelformat.cpp  pixelformat.h
source/Genesis/Bitmap/Compression/: palcreate.cpp  palcreate.h  palettize.cpp  palettize.h  paloptimize.cpp  paloptimize.h  utility.h  yuv.cpp  yuv.h
source/Genesis/Engine/: BitmapList.cpp  BitmapList.h  System.cpp  System.h  engine.cpp  engine.h
source/Genesis/Engine/Drivers/: Dcommon.h
source/Genesis/Entities/: ENTITIES.H  Entities.cpp
source/Genesis/Font/: font.cpp  font.old  wgClip.H  wgClip.cpp
source/Genesis/Math/: Box.h  ExtBox.old  VEC3D.old  Vec3d.cpp  XFORM3D.H  XFORM3D.old  Xform3d.cpp  crc32.h  quatern.cpp  quatern.h  quatern.old
source/Genesis/Physics/: PhysicsJoint.cpp  PhysicsJoint.old  PhysicsObject.cpp  PhysicsSystem.cpp  matrix33.cpp
source/Genesis/Support/: BASETYPE.H  Errorlog.cpp  Errorlog.h  Errorlog.old  Ram.cpp  Ram.h  geAssert.cpp  geAssert.h  geRootImpl.cpp  geRootImpl.h  log.cpp  log.h  mempool.cpp  mempool.h
source/Genesis/VFile/: Fsmemory.cpp  dirtree.cpp  fsdos.cpp  fsvfs.cpp  vfile._h  vfile.cpp  vfile.h
source/Genesis/World/: FRUSTUM.H  Fog.cpp  Fog.h  Frustum.cpp  GBSPFILE.H  Gbspfile.cpp  LIGHT.H  Light.cpp  PLANE.H  Plane.cpp  SURFACE.H  Surface.cpp  TRACE.H  Trace.cpp  USER.H  User.cpp  Vis.cpp  Vis.h  WBitmap.cpp  WBitmap.h  WORLD.H  World.cpp
(+648 files in other folders)
