
file(GLOB GENESIS3D_MAIN_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
file(GLOB GENESIS3D_ACTOR_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/Actor/*.cpp)
file(GLOB_RECURSE GENESIS3D_BITMAP_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/Bitmap/*.cpp)
file(GLOB GENESIS3D_ENGINE_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/Engine/*.cpp)
file(GLOB GENESIS3D_LOGO_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/Engine/Logo/*.cpp)
file(GLOB GENESIS3D_ENTITIES_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/Entities/*.cpp)
file(GLOB GENESIS3D_FONT_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/Font/*.cpp)
file(GLOB GENESIS3D_MATH_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/Math/*.cpp)
file(GLOB GENESIS3D_PHYSICS_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/Physics/*.cpp)
file(GLOB GENESIS3D_SUPPORT_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/Support/*.cpp)
file(GLOB GENESIS3D_VFILE_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/VFile/*.cpp)
file(GLOB GENESIS3D_WORLD_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/World/*.cpp)

add_library(genesis3d STATIC)
message(${GENESIS_INCLUDE_PATH})

target_include_directories(genesis3d PUBLIC
    ${GENESIS_INCLUDE_PATH}
    ${CMAKE_CURRENT_LIST_DIR}
    ${CMAKE_CURRENT_LIST_DIR}/Actor
    ${CMAKE_CURRENT_LIST_DIR}/Bitmap
    ${CMAKE_CURRENT_LIST_DIR}/Bitmap/Compression
    ${CMAKE_CURRENT_LIST_DIR}/Engine
    ${CMAKE_CURRENT_LIST_DIR}/Engine/Logo
    ${CMAKE_CURRENT_LIST_DIR}/Engine/Drivers
    ${CMAKE_CURRENT_LIST_DIR}/Entities
    ${CMAKE_CURRENT_LIST_DIR}/Font
    ${CMAKE_CURRENT_LIST_DIR}/Math
    ${CMAKE_CURRENT_LIST_DIR}/Physics
    ${CMAKE_CURRENT_LIST_DIR}/Support
    ${CMAKE_CURRENT_LIST_DIR}/VFile
    ${CMAKE_CURRENT_LIST_DIR}/World
)

target_link_libraries(genesis3d PUBLIC
)

target_sources(genesis3d PUBLIC
    ${GENESIS3D_MAIN_SRC_FILES}
    ${GENESIS3D_ACTOR_SRC_FILES}
    ${GENESIS3D_BITMAP_SRC_FILES}
    ${GENESIS3D_ENGINE_SRC_FILES}
    ${GENESIS3D_LOGO_SRC_FILES}
    ${GENESIS3D_ENTITIES_SRC_FILES}
    ${GENESIS3D_FONT_SRC_FILES}
    ${GENESIS3D_MATH_SRC_FILES}
    ${GENESIS3D_PHYSICS_SRC_FILES}
    ${GENESIS3D_SUPPORT_SRC_FILES}
    ${GENESIS3D_VFILE_SRC_FILES}
    ${GENESIS3D_WORLD_SRC_FILES}
)
